@@ -1,5 +1,10 @@
 2013-03-22  Guillaume Lazzara  <z@lrde.epita.fr>
 
+	* scribo/primitive/link/with_single_left_link_dmax_ratio_aligned.hh:
+	Fix an invalid forward declaration.
+
+2013-03-22  Guillaume Lazzara  <z@lrde.epita.fr>
+
 	Small fixes.
 
 	* scribo/binarization/internal/global_max_stddev_functor.hh:
